crates/doodle-core/tests/snapshots/broken_syntax__05_stray_do.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `end` to close this `to`
  --> 05-stray-do.doodle:4:1
4 | 
  | ^
